--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.1.13",
+    "framer-motion": "^10.16.4",
     "mongodb": "^6.1.0",
     "next": "13.5.5",
     "react": "^18",
@@ -21,6 +23,7 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "13.5.5",
+    "tailwindcss": "^3.3.3",
     "typescript": "^5"
   }
 }
