--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,7 +32,8 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    ".next/types/**/*.ts"
+    ".next/types/**/*.ts",
+    "./node_modules/@types/**/*.d.ts"
   ],
   "exclude": [
     "node_modules"
