--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "13.5.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^4.11.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
