Display multiple skills

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@nextui-org/react": "^2.1.13",
     "@visx/curve": "^3.3.0",
+    "@visx/responsive": "^3.3.0",
     "@visx/tooltip": "^3.3.0",
     "@visx/xychart": "^3.4.0",
     "framer-motion": "^10.16.4",
